# hacpi

./: CHANGELOG.md  Hacpi.hs  Main.hs  cabal.project  hacpi.cabal
