cabal-version:       >=1.10

name:                hacpi
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              francois
maintainer:          francois@mahoneko.net
build-type:          Simple
extra-source-files:  CHANGELOG.md
      
library
  exposed-modules:     Hacpi

  build-depends:       attoparsec >= 0.13,
                       base >= 4.13.0.0,
                       network >= 3.1.2,
                       text >= 1.2.4
                       
  default-language:    Haskell2010


